# tiberium

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
apps/passport/: admin.py  api.py  apps.py  models.py  permissions.py  serializers.py  urls.py
apps/passport/migrations/: 0001_initial.py
apps/post/: admin.py  models.py  serializers.py  urls.py
apps/post/api/: likes.py  posts.py
apps/post/migrations/: 0001_initial.py  0002_auto_20190509_1547.py  0003_auto_20190518_1850.py
apps/post/tasks/: __init__.py  create_post.py  like_post.py  social_life.py
apps/user/: admin.py  api.py  models.py  serializers.py  urls.py
apps/user/migrations/: 0001_initial.py  0002_auto_20190518_1850.py
apps/user/tasks/: __init__.py  user_creating.py
apps/youtube/: admin.py  api.py  apps.py  models.py  urls.py
apps/youtube/migrations/: 0001_initial.py
docker/app/: Dockerfile  gunicorn.py
tiberium/: celery.py  drf_mock.py  drf_settings.py  query_manager.py  settings.py  urls.py  utils.py  wsgi.py
